--- a/example.service
+++ b/example.service
@@ -5,8 +5,8 @@ After=network.target
 
 [Service]
 Type=simple
-User=devQRIS
-Group=devQRIS
+User=user
+Group=user
 WorkingDirectory=/home/html/webrtc
 ExecStart=/home/sms/webrtc/app
 Restart=on-failure
